@@ -30,132 +30,155 @@ import java.util.LinkedList;
 
 /**
  * Creates interval indexes from a stream of features
+ * 
  * @author jrobinso
  */
 public class IntervalIndexCreator extends TribbleIndexCreator {
 
-    public static int DEFAULT_FEATURE_COUNT = 600;
+	public static int DEFAULT_FEATURE_COUNT = 600;
 
-    /**
-     * Maximum number of features stored per interval.
-     * @see #DEFAULT_FEATURE_COUNT
-     */
-    private int featuresPerInterval = DEFAULT_FEATURE_COUNT;
+	/**
+	 * Maximum number of features stored per interval.
+	 * 
+	 * @see #DEFAULT_FEATURE_COUNT
+	 */
+	private int featuresPerInterval = DEFAULT_FEATURE_COUNT;
 
-    private final LinkedList<ChrIndex> chrList = new LinkedList<ChrIndex>();
+	private final LinkedList<ChrIndex> chrList = new LinkedList<ChrIndex>();
 
-    /**
-     * Instance variable for the number of features we currently are storing in the interval
-     */
-    private int featureCount = 0;
+	/**
+	 * Instance variable for the number of features we currently are storing in
+	 * the interval
+	 */
+	private int featureCount = 0;
 
-    private final ArrayList<MutableInterval> intervals = new ArrayList<MutableInterval>();
+	private final ArrayList<MutableInterval> intervals = new ArrayList<MutableInterval>();
 
-    File inputFile;
+	File inputFile;
 
-    public IntervalIndexCreator(final File inputFile, final int featuresPerInterval) {
-        this.inputFile = inputFile;
-        this.featuresPerInterval = featuresPerInterval;
-    }
+	public IntervalIndexCreator(final File inputFile,
+			final int featuresPerInterval) {
+		this.inputFile = inputFile;
+		this.featuresPerInterval = featuresPerInterval;
+	}
 
-    public IntervalIndexCreator(final File inputFile) {
-        this(inputFile, DEFAULT_FEATURE_COUNT);
-    }
+	public IntervalIndexCreator(final File inputFile) {
+		this(inputFile, DEFAULT_FEATURE_COUNT);
+	}
 
-    @Override
+	@Override
 	public void addFeature(final Feature feature, final long filePosition) {
-        // if we don't have a chrIndex yet, or if the last one was for the previous contig, create a new one
-        if (chrList.size() == 0 || !chrList.getLast().getName().equals(feature.getChr())) {
-            // if we're creating a new chrIndex (not the first), make sure to dump the intervals to the old chrIndex
-            if (chrList.size() != 0)
-                addIntervalsToLastChr(filePosition);
+		// if we don't have a chrIndex yet, or if the last one was for the
+		// previous contig, create a new one
+		if (chrList.size() == 0
+				|| !chrList.getLast().getName().equals(feature.getChr())) {
+			// if we're creating a new chrIndex (not the first), make sure to
+			// dump the intervals to the old chrIndex
+			if (chrList.size() != 0)
+				addIntervalsToLastChr(filePosition);
 
-            // create a new chr index for the current contig
-            chrList.add(new ChrIndex(feature.getChr()));
-            intervals.clear();
-        }
+			// create a new chr index for the current contig
+			chrList.add(new ChrIndex(feature.getChr()));
+			intervals.clear();
+		}
 
-        // if we're about to overflow the current bin, make a new one
-        if (featureCount >= featuresPerInterval || intervals.size() == 0) {
-            final MutableInterval i = new MutableInterval();
-            i.setStart(feature.getStart());
-            i.setStartFilePosition(filePosition);
-            if( intervals.size() > 0) intervals.get(intervals.size()-1).setEndFilePosition(filePosition);
-            featureCount = 0; // reset the feature count
-            intervals.add(i);
-        }
-        
-        // make sure we update the ending position of the bin
-        intervals.get(intervals.size()-1).setStop(Math.max(feature.getEnd(),intervals.get(intervals.size()-1).getStop()));
-        featureCount++;
-    }
+		// if we're about to overflow the current bin, make a new one
+		if (featureCount >= featuresPerInterval || intervals.size() == 0) {
+			final MutableInterval i = new MutableInterval();
+			i.setStart(feature.getStart());
+			i.setStartFilePosition(filePosition);
+			if (intervals.size() > 0)
+				intervals.get(intervals.size() - 1).setEndFilePosition(
+						filePosition);
+			featureCount = 0; // reset the feature count
+			intervals.add(i);
+		}
 
-    /**
-     * dump the intervals we have stored to the last chrList entry
-     * @param currentPos the current position, for the last entry in the interval list
-     */
-    private void addIntervalsToLastChr(final long currentPos) {
-        for (int x = 0; x < intervals.size(); x++) {
-            if (x == intervals.size()-1) intervals.get(x).setEndFilePosition(currentPos);
-            chrList.getLast().insert(intervals.get(x).toInterval());
-        }
-    }
+		// make sure we update the ending position of the bin
+		intervals.get(intervals.size() - 1).setStop(
+				Math.max(feature.getEnd(), intervals.get(intervals.size() - 1)
+						.getStop()));
+		featureCount++;
+	}
 
-    /**
-     * finalize the index; create a tree index given the feature list passed in so far
-     * @param finalFilePosition the final file position, for indexes that have to close out with the final position
-     * @return a Tree Index
-     */
-    @Override
+	/**
+	 * dump the intervals we have stored to the last chrList entry
+	 * 
+	 * @param currentPos
+	 *            the current position, for the last entry in the interval list
+	 */
+	private void addIntervalsToLastChr(final long currentPos) {
+		for (int x = 0; x < intervals.size(); x++) {
+			if (x == intervals.size() - 1)
+				intervals.get(x).setEndFilePosition(currentPos);
+			chrList.getLast().insert(intervals.get(x).toInterval());
+		}
+	}
+
+	/**
+	 * finalize the index; create a tree index given the feature list passed in
+	 * so far
+	 * 
+	 * @param finalFilePosition
+	 *            the final file position, for indexes that have to close out
+	 *            with the final position
+	 * @return a Tree Index
+	 */
+	@Override
 	public Index finalizeIndex(final long finalFilePosition) {
-        final IntervalTreeIndex featureIndex = new IntervalTreeIndex(inputFile.getAbsolutePath());
-        // dump the remaining bins to the index
-        addIntervalsToLastChr(finalFilePosition);
-        featureIndex.setChrIndex(chrList);
-        featureIndex.addProperties(properties);
-        featureIndex.finalizeIndex();
-        return featureIndex;
-    }
+		final IntervalTreeIndex featureIndex = new IntervalTreeIndex(
+				inputFile.getAbsolutePath());
+		// dump the remaining bins to the index
+		addIntervalsToLastChr(finalFilePosition);
+		featureIndex.setChrIndex(chrList);
+		featureIndex.addProperties(properties);
+		featureIndex.finalizeIndex();
+		return featureIndex;
+	}
 
-    public int getFeaturesPerInterval() {
-        return featuresPerInterval;
-    }
+	public int getFeaturesPerInterval() {
+		return featuresPerInterval;
+	}
 }
 
 /**
- * The interval class isn't mutable; use this private class as a temporary storage until we're ready to make intervals
+ * The interval class isn't mutable; use this private class as a temporary
+ * storage until we're ready to make intervals
  */
 class MutableInterval {
 
-    // the start, the stop, and the start position
-    private int start;
-    private int stop;                                                                                                                                               
-    private long startFilePosition;
-    private long endFilePosition;
+	// the start, the stop, and the start position
+	private int start;
+	private int stop;
+	private long startFilePosition;
+	private long endFilePosition;
 
-    public void setStart(final int start) {
-        if (start < 0) throw new IllegalArgumentException("Start must be greater than 0!");
-        this.start = start;
-    }
+	public void setStart(final int start) {
+		if (start < 0)
+			throw new IllegalArgumentException("Start must be greater than 0!");
+		this.start = start;
+	}
 
-    public void setStop(final int stop) {
-        if (stop < 0) throw new IllegalArgumentException("Start must be greater than 0!");
-        this.stop = stop;
-    }
+	public void setStop(final int stop) {
+		if (stop < 0)
+			throw new IllegalArgumentException("Start must be greater than 0!");
+		this.stop = stop;
+	}
 
-    public void setStartFilePosition(final long startFilePosition) {
-        this.startFilePosition = startFilePosition;
-    }
+	public void setStartFilePosition(final long startFilePosition) {
+		this.startFilePosition = startFilePosition;
+	}
 
-    public void setEndFilePosition(final long endFilePosition) {
-        this.endFilePosition = endFilePosition;
-    }
+	public void setEndFilePosition(final long endFilePosition) {
+		this.endFilePosition = endFilePosition;
+	}
 
-    public Interval toInterval() {
-        return new Interval(start,stop,new Block(startFilePosition, endFilePosition - startFilePosition));
-    }
+	public Interval toInterval() {
+		return new Interval(start, stop, new Block(startFilePosition,
+				endFilePosition - startFilePosition));
+	}
 
-    public int getStop() {
-        return stop;
-    }
+	public int getStop() {
+		return stop;
+	}
 }
